[gd_scene load_steps=10 format=3 uid="uid://dp1tbssycxeny"]

[ext_resource type="Script" uid="uid://ddha4xyfeh1en" path="res://scripts/score_report.gd" id="1_s1n5t"]
[ext_resource type="PackedScene" uid="uid://be7fbaw21lj7s" path="res://scenes/menus/menu_background.tscn" id="2_2elch"]
[ext_resource type="PackedScene" uid="uid://duu4i61jd05wk" path="res://scenes/menus/title_banner.tscn" id="2_jul3p"]
[ext_resource type="PackedScene" uid="uid://cuq8nt1ni1j5" path="res://scenes/ui/frame.tscn" id="4_6hoqc"]
[ext_resource type="PackedScene" uid="uid://cen6idq2e3365" path="res://scenes/components/high_score_viewer.tscn" id="5_c4blo"]
[ext_resource type="PackedScene" uid="uid://eo7qn7ss8wjk" path="res://scenes/ui/arrow_button.tscn" id="7_2elch"]
[ext_resource type="Texture2D" uid="uid://cf1bw5se8yik2" path="res://assets/decor/s_t_03.PNG" id="7_xrsva"]
[ext_resource type="Texture2D" uid="uid://mb2npbbqxnsk" path="res://assets/decor/s_05.PNG" id="8_jul3p"]

[sub_resource type="LabelSettings" id="LabelSettings_uin86"]
font_size = 50
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="ScoreReport" type="Node2D"]
script = ExtResource("1_s1n5t")

[node name="TitleBanner" parent="." instance=ExtResource("2_jul3p")]
z_index = 1
offset_left = 500.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 200.0

[node name="Background" parent="." instance=ExtResource("2_2elch")]

[node name="Frame" parent="." instance=ExtResource("4_6hoqc")]
position = Vector2(0, 500)

[node name="Label" type="Label" parent="Frame"]
z_index = 3
offset_left = 350.0
offset_top = -50.0
offset_right = 522.0
offset_bottom = 91.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "SCORE:
"
label_settings = SubResource("LabelSettings_uin86")

[node name="ScoreLabel" type="Label" parent="Frame"]
z_index = 3
offset_left = 476.0
offset_top = -50.0
offset_right = 800.0
offset_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0	"
label_settings = SubResource("LabelSettings_uin86")
horizontal_alignment = 1

[node name="S05" type="Sprite2D" parent="Frame"]
z_index = 3
position = Vector2(540, -6)
scale = Vector2(2, 0.5)
texture = ExtResource("8_jul3p")

[node name="ST03" type="Sprite2D" parent="Frame"]
z_index = 1
position = Vector2(540, 0)
scale = Vector2(0.55, 0.8)
texture = ExtResource("7_xrsva")

[node name="HighScoreViewer" parent="Frame" instance=ExtResource("5_c4blo")]
offset_left = 200.0
offset_top = 40.0
offset_right = 900.0
offset_bottom = 540.0

[node name="BackButton" parent="." instance=ExtResource("7_2elch")]
position = Vector2(225, 1695)
